projeto-project-pixels-ar- requisito 7 e 8 -tentativa3 -olhei (https://pt.stackoverflow.com/questions/176916/javascript-fun%C3%A7%C3%A3o-que-retorna-valor-de-uma-propriedade-css - nao fixei os conceitos de forma satisfatoria

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1{
 #pixel-board{ 
     display: table; 
     margin: 50px;
-    background-color: white;
+    
 }
 .tr{ 
     display: table-row; 
@@ -52,6 +52,6 @@ h1{
     width: 40px;
     height: 40px;
     border: solid black 1px;
-    background-color:white;
+   
 
 }
